<resources>
    <string name="app_name">My Inventory App Stage1</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Book</string>
    <string name="editor_activity_title_new_pet">Add a Book</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="category_overview">Overview</string>
    <string name="book_name">Book Name</string>
    <string name="book_price">Book Price</string>
    <string name="quantity">Quantity</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_phone">Supplier Phone</string>
    <string name="book_type">Input Type</string>
    <string name="book_all">All</string>
    <string name="book_paper">Paper</string>
    <string name="book_ebook">E-Book</string>

    <string name="editor_insert_book_successful">Book saved</string>
    <string name="editor_insert_book_failed">Error with saving Book</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">there are not available books now ...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Add a Book</string>
    <string name="editor_activity_title_edit_book">Edit Book</string>
    <string name="you_did_not_add_any_Book">you did not add any Book</string>

    <string name="editor_update_book_successful">Book update</string>
    <string name="editor_update_book_failed">Error with update Book</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current book -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current pet was successfully deleted [CHAR LIMIT=NONE] -->
        <string name="editor_delete_book_successful">Book deleted</string>

        <!-- Toast message in editor when current pet has failed to be deleted [CHAR LIMIT=NONE] -->
        <string name="editor_delete_book_failed">Error with deleting Book</string>

        <!-- Dialog message to ask the user to confirm deleting the current pet [CHAR LIMIT=NONE] -->
        <string name="delete_dialog_msg">Delete this Book?</string>

        <!-- Dialog button text for the option to confirm deleting the current pet [CHAR LIMIT=20] -->
        <string name="delete">Delete</string>

        <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
        <string name="cancel">Cancel</string>

    <!-- Label for the pet's breed if the breed is unknown [CHAR LIMIT=20] -->
    <string name="unknown_breed">Unknown breed</string>

    <string name="wrong_name">Add Name</string>
    <string name="wrong_price">Add Price</string>
    <string name="wrong_quantity">Add Quantity</string>
    <string name="wrong_supplier_name">Add Supplier Name</string>
    <string name="wrong_supplier_phone">Add Supplier Phone</string>
</resources>