<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/list_main"
    android:descendantFocusability="blocksDescendants"
    android:padding="@dimen/activity_margin16">
    <TextView
        android:id="@+id/name"
        android:fontFamily="sans-serif-medium"
        style="@style/list_text_name"
        android:textAppearance="?android:textAppearanceMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/price"
        style="@style/list_text_price"
        android:fontFamily="sans-serif"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintLeft_toRightOf="@id/name" />
    <LinearLayout
        android:id="@+id/linearLayout2"
        style="@style/list_layout"
        app:layout_constraintTop_toBottomOf="@id/name">
        <TextView
            android:id="@+id/type"
            style="@style/list_text"
            android:fontFamily="sans-serif"
            android:text="@string/book_type"
            android:textAppearance="?android:textAppearanceSmall"/>
        <TextView
            android:id="@+id/quantity"
            style="@style/list_text"
            android:fontFamily="sans-serif"
            android:text="@string/quantity"
            android:textAppearance="?android:textAppearanceSmall"/>
        <TextView
            android:id="@+id/supplier_n"
            style="@style/list_text"
            android:fontFamily="sans-serif"
            android:text="@string/supplier_name"
            android:textAppearance="?android:textAppearanceSmall"/>
        <TextView
            android:id="@+id/supplier_p"
            style="@style/list_text"
            android:fontFamily="sans-serif"
            android:text="@string/supplier_phone"
            android:textAppearance="?android:textAppearanceSmall"/>
        <Button
            android:id="@+id/buy_button"
            android:layout_gravity="center"
            style="@style/list_button"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>