<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EditorActivity">
  <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="vertical">
      <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
             <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:padding="6dp"
                 android:layout_margin="10dp"
                android:text="@string/product_name"/>
             <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">
                 <EditText
                   android:id="@+id/edit_book_name"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:inputType="textCapWords"
                   android:fontFamily="sans-serif-condensed"
                   android:hint="Book Name"/>
             </LinearLayout>

       </LinearLayout>

       <LinearLayout
        android:id="@+id/price_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
           <TextView
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:fontFamily="sans-serif-condensed"
               android:padding="16dp"
               android:text="@string/book_price"
               android:textAppearance="?android:textAppearanceSmall"
               android:textColor="@color/colorPrimary"/>
           <LinearLayout
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="2"
               android:padding="5dp">
               <EditText
                   android:id="@+id/edit_book_price"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:inputType="textCapWords"
                   android:fontFamily="sans-serif-condensed"
                   android:hint="Book Price"/>
           </LinearLayout>
      </LinearLayout>

      <LinearLayout
          android:id="@+id/quantity_book"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">
          <TextView
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:fontFamily="sans-serif-condensed"
              android:padding="16dp"
              android:text="@string/quantity"
              android:textAppearance="?android:textAppearanceSmall"
              android:textColor="@color/colorPrimary"/>
          <LinearLayout
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="2"
              android:padding="5dp">
              <EditText
                  android:id="@+id/edit_book_quantity"
                  android:layout_width="match_parent"
                  android:layout_weight="2"
                  android:layout_height="wrap_content"
                  android:inputType="textCapWords"
                  android:fontFamily="sans-serif-condensed"
                  android:hint="Book Quantity"/>
          </LinearLayout>
      </LinearLayout>

      <LinearLayout
          android:id="@+id/type_book"
          android:layout_width="match_parent"
          android:orientation="horizontal"
          android:layout_height="wrap_content">
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/book_type"
              android:padding="13dp"
              android:textAppearance="?android:textAppearanceSmall"
              android:textColor="@color/colorPrimary" />

          <Spinner
              android:id="@+id/type_of_book"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:fontFamily="sans-serif-condensed"
              android:padding="16dp"
              android:layout_marginLeft="40dp"
              android:spinnerMode="dropdown" />
      </LinearLayout>

          <LinearLayout
              android:id="@+id/supplier_name"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal">
              <TextView
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:fontFamily="sans-serif-condensed"
                  android:padding="16dp"
                  android:text="@string/supplier_name"
                  android:textAppearance="?android:textAppearanceSmall"
                  android:textColor="@color/colorPrimary"/>
              <LinearLayout
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="2"
                  android:padding="5dp">
                  <EditText
                      android:id="@+id/edit_book_supplir_name"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textCapWords"
                      android:fontFamily="sans-serif-condensed"
                      android:hint="Book Supplier Name"/>
              </LinearLayout>
          </LinearLayout>

          <LinearLayout
              android:id="@+id/supplier_phone"
              android:layout_width="match_parent"
              android:orientation="horizontal"
              android:layout_height="wrap_content">

              <TextView
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:fontFamily="sans-serif-condensed"
                  android:padding="16dp"
                  android:text="@string/supplier_phone"
                  android:textAppearance="?android:textAppearanceSmall"
                  android:textColor="@color/colorPrimary"/>
              <LinearLayout
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="2"
                  android:padding="5dp">
                  <EditText
                      android:id="@+id/edit_book_supplier_phone"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textCapWords"
                      android:fontFamily="sans-serif-condensed"
                      android:hint="Book Supplier Phone"/>
              </LinearLayout>
          </LinearLayout>
  </LinearLayout>
</android.support.constraint.ConstraintLayout>